fix z-index of modal content

--- a/31 - 60/57 - Portfolio Website Design/style.css
+++ b/31 - 60/57 - Portfolio Website Design/style.css
@@ -323,6 +323,7 @@ textarea:focus{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .modal-content h1{
